<resources>
    <string name="app_name">HAPIApp Demo</string>
    <string name="terms_amp_condition">Điều khoản sử dụng</string>
    <string name="hapi_server_addr">https://f7e960290b34.ngrok.io</string>
    <string name="auth_file_name">studentcre.dat</string>
    <string name="error_fallback_msg">Lỗi: Vui lòng gửi mail tới bug.collection@roleplay.vn về lỗi này</string>
    <string name="error_invalid_credentials_msg">Lỗi: Thông tin đăng nhập không hợp lệ</string>
    <string name="sid_required">MSSV là bắt buộc</string>
    <string name="spwd_required">Mật khẩu sinh viên là bắt buộc</string>
    <string name="auth_invalid_credentials">Vui lòng kiểm tra lại thông tin tài khoản</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="DetailPopup">DetailPopup</string>
    <string name="retrieve_data_failed">Dữ liệu lỗi!</string>
    <string name="empty_string">Dữ liệu trống!</string>
    <string name="loading_txt">Chờ một lát! Đang tải...</string>
    <string name="StudentEvalute">Đánh giá rèn luyện</string>
    <string name="please_allow_permission">Vui lòng gán quyền và thử lại</string>
    <string name="logout_loading">Đang đăng xuất khỏi ứng dụng...</string>

    <string name="image_uploading_txt">Hình ảnh đang được tải lên...</string>

    <string name="donate_warning">Donate này sử dụng sức tính toán của thiết bị chứ không mất khoản phí nào khác.</string>

    <string name="home_btn_tb">Thông báo</string>
    <string name="oops_error">Ối ối!</string>
    <string name="donate">Donate</string>
    <string name="hapi_slogan">Tự do như cơn gió</string>

    <string name="admob_rewarded">ca-app-pub-2335307097838267/4787286389</string>
    <string name="admob_interstitial_main">ca-app-pub-2335307097838267/7953888665</string>

    <string name="log_out">Đăng xuất</string>
    <string name="facebook_bot">Messenger Bot</string>

    <string name="sp1_mail">mailto:vi@maxmines.com</string>
    <string name="sp2_mail">mailto:levynguyen.17@gmail.com</string>

    <string name="thanks_for_your_support">Cảm ơn bạn đã ủng hộ</string>
    <string name="click_here_to_mail">Click vào đây để yêu cầu hỗ trợ mail</string>
    <string name="please_wait_for_load">Vui lòng chờ một lát nữa nha!</string>

    <string name="student_ev_chckpoint">Tài khoản của bạn đang bị khóa tạm thời, vui lòng đăng nhập lại trên https://daotao.hutech.edu.vn</string>
    <string name="forgot_password_url">http://qlcntt.hutech.edu.vn/forgot-password</string>
    <string name="avatar_upload_error">Có lỗi xảy ra trong quá trình cập nhật ảnh đại diện của bạn</string>
    <string name="welcome_to_hapiapp">Đây là app demo nên sẽ có sai sót. Nếu phát hiện sai sót thì hãy gửi mail về team.g5@roleplay.vn giúp chúng mình nhé.</string>

    <string name="permission_title">Gán quyền</string>
    <string name="permission_detail">Vui lòng gán quyền để chúng tôi có thể phục vụ bạn tốt hơn!.</string>
    <string name="continue_and_learn">Hãy gán quyền để ứng dụng hoạt động tốt hơn</string>

    <string name="sharedprefname">hapi_r</string>
    <string name="ondisabledpermission">Nếu ứng dụng hoạt động trong khi bị thiếu quyền, sẽ có nhiều chức năng hoạt động không đúng</string>
    <string name="ondeniedpermission">Hãy cấp quyền cho ứng dụng để được trải nghiệm tốt nhất!</string>
    <string name="onboarding_value">onboarding_complete</string>
    <string name="ob_done">Hoàn thành</string>
    <string name="ob_skip">Bỏ qua</string>

    <string name="ob_support_title">Hỗ trợ</string>
    <string name="ob_support_desc">Nếu như bạn có ý kiến về ứng dụng như muốn thêm chức năng khác hãy sử dụng trang hỗ trợ để góp ý cũng như báo lỗi cho chúng mình để cải thiện ứng dụng...</string>
    <string name="ob_evaluate_title">Đánh giá rèn luyện</string>
    <string name="ob_evaluate_desc">Bạn có thể xem chi tiết đánh giá rèn luyện theo từng năm học của bạn tại trang đánh giá rèn luyện</string>
    <string name="ob_schedule_title">Thời khóa biểu</string>
    <string name="ob_schedule_desc">Ở đây bạn có thể xem chi tiết thời khóa biểu theo từng năm học của mình</string>
    <string name="ob_ev_title">Lịch thi</string>
    <string name="ob_ev_desc">Bạn có thể xem chi tiết lịch thi theo năm học hiện tại của mình tại trang xem lịch thi của ứng dụng</string>
    <string name="ob_point_title">Xem điểm</string>
    <string name="ob_point_desc">Bạn có thể xem chi tiết điểm của tất cả năm học tại trang xem điểm của ứng dụng</string>
    <string name="ob_announcement_title">Thông báo</string>
    <string name="ob_announcement_desc">Bạn có thể xem thông báo mới nhất từ trường tại trang thông báo của ứng dụng</string>
    <string name="ob_first_title">Chào mừng bạn đến với HapiApp</string>

    <string name="mainpage_lbl">@string/app_name</string>
    <string name="ThongTinActivity">Thông tin</string>
    <string name="force_update">Để có thể tiếp tục sử dụng ứng dụng này vui lòng cập nhật phiên bản mới nhất.</string>
    <string name="update_str">CẬP NHẬT</string>
    <string name="vcheck_api_url">https://api.rqn9.com/data/1.0/dapp/_/182230003154962/version</string>
    <string name="p_total_box_title">Tổng kết học kỳ</string>

    <string name="rank_0_title">Trung bình</string>
    <string name="rank_0_desc">Cố gắng nhiều hơn bạn nhé!</string>
    <string name="rank_1_title">Khá</string>
    <string name="rank_1_desc">Làm tốt lắm! Hãy cố gắng hơn!</string>
    <string name="rank_2_title">Giỏi</string>
    <string name="rank_2_desc">Tuyệt vời! Chỉ 1 chút nữa thôi!</string>
    <string name="rank_3_title">Xuất sắc</string>
    <string name="rank_3_desc">Quá tuyệt vời bạn ơi!</string>
    <string name="rank_minus1_title">Khá</string>
    <string name="rank_minus1_desc">Thật tệ, hãy cố gắng hơn bạn nhé!</string>

    <string name="support_need_help">Sinh viên dùng Hapi App cần hỗ trợ!</string>
    <string name="support_need_help_body">Bạn cần giúp gì, hãy xóa dòng này và viết mới nội dung cần giúp đỡ nhé!</string>
    <string name="student_disabled_or_some_thing">Tài khoản này có thể đang được bảo lưu hoặc máy chủ đang gặp sự cố</string>

    <string name="login_with_fingerprint">Đăng nhập bằng vân tay</string>
    <string name="login_with_fingerprint_desc">Dùng vân tay thay mật khẩu cho tài khoản này</string>
    <string name="finger_login">Sử dụng vân tay</string>
    <string name="failed_finger_print">Đăng nhập thất bại, vui lòng đăng nhập bằng mật khẩu</string>
    <string name="finger_2fa_activated">Kích hoạt đăng nhập bằng vân tay thành công cho tài khoản. Lưu ý, chức năng đăng nhập vân tay sẽ tự động vô hiệu hóa nếu có tài khoản khác đăng nhập vì bảo mật!</string>
    <string name="finger_2fa_deactivated">Hủy kích hoạt đăng nhập bằng dấu vân tay thành công.</string>
    <string name="finger_string_success">Bạn có thể dùng vân tay để đăng nhập</string>
    <string name="finger_string_no_hardware">Thiết bị này không hỗ trợ vân tay</string>
    <string name="finger_string_hw_unavailable">Hệ thống vân tay hiện không hoạt động</string>
    <string name="finger_string_none_enrolled">Thiết bị của bạn không có dấu vân tay fingerprint_failed_to_loginnào được lưu cả, vui lòng kiểm tra lại!</string>
    <string name="use_your_fingerprint">Dùng vân tay của bạn để đăng nhập</string>
    <string name="login_cancel">Hủy</string>
    <string name="fingerprint_failed_to_login">Đăng nhập bằng vân tay thất bại!</string>

    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="contacts">Liên hệ</string>
    <string name="queue">Queue</string>
    <string name="oi_doi_oi">oi_doi_oi</string>
    <string name="oi_gioi_oi">oi_gioi_oi</string>
    <string name="home">Trang chủ</string>

    <string name="account_note">Hapi khuyên bạn không nên chia sẽ thông tin cá nhân cho bất kỳ cá nhân, tổ chức nào khác. Nếu bạn bị lộ thông tin ra ngoài, Hapi cũng buồn :(</string>

    <string name="AuthPage">Đăng nhập</string>
    <string name="schedule_lbl">Thời khóa biểu</string>
    <string name="vipoint_lbl">Xem điểm</string>
    <string name="eschedule_lbl">Lịch thi</string>

    <string name="loginTxt">Vui lòng nhập MSSV và mật khẩu của bạn! Nếu bạn quên tài khoản, vui lòng gửi yêu cầu cấp mật khẩu tại tại qlcntt.hutech.edu.vn.</string>
    <string name="sid_lbl">Mã số sinh viên</string>
    <string name="pwd_lbl">Mật khẩu</string>
    <string name="login_btn">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>

    <string name="home_btn_tt">Thông tin</string>
    <string name="home_btn_xd">Xem điểm</string>
    <string name="home_btn_lt">Lịch thi</string>
    <string name="home_btn_tkb">Thời khóa biểu</string>
    <string name="home_btn_dgrl">Đánh giá rèn luyện</string>

    <string name="donate_url">https://donate.error.vn</string>
    <string name="donate_title">Donate</string>
</resources>