<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_above="@+id/loginToHapiApp"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_account"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/loginToHapiApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/aggrement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="40dp"
                android:text="@string/loginTxt"
                style="@style/TextAppearance.AppCompat.Caption" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sjdus"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/navheader"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="#FFFFFF"
                app:boxBackgroundColor="#FFFFFF"
                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studentIdIpt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/sid_lbl" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/showHideBtn"
                android:layout_width="match_parent"
                android:layout_below="@+id/sjdus"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="#FFFFFF"
                app:boxBackgroundColor="#FFFFFF"
                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studentPwdIpt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/pwd_lbl"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_save"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/MMPrimary"
                    android:text="@string/login_btn" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginToHapiApp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/button_to_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:padding="10dp"
            android:text="@string/forgot_password" />
    </LinearLayout>

</RelativeLayout>
</layout>