<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/say_bye_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.MyStyle"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp">

                <LinearLayout
                    android:id="@+id/bd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/iTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:text="@string/app_name"/>

                            <TextView
                                android:id="@+id/iBody"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="5dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:text="@string/hapi_slogan"/>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginBottom="10dp"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/donateBtn"
                                    style="@style/Widget.AppCompat.Button.Small"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/colorDarkGray"
                                    android:text="@string/donate" />

                                <Button
                                    android:id="@+id/copyBtn"
                                    style="@style/Widget.AppCompat.Button.Small"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:backgroundTint="@color/colorGray"
                                    android:text="@string/home" />
                            </LinearLayout>

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/invite_img"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="-1dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="16dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_train" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="@color/MMGray" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fingerSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="15dp"
                style="@style/CardView.MyStyle"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:text="@string/login_with_fingerprint"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/login_with_fingerprint_desc"/>
                    </LinearLayout>
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sw"
                        android:checked="false"
                        android:thumbTint="@color/MMPrimary"
                        android:trackTint="@color/colorDarkGray"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/facebookBot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="15dp"
            style="@style/CardView.MyStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:text="@string/facebook_bot" />


                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="36dp"
                            android:layout_marginRight="10dp"
                            android:layout_height="36dp"
                            android:padding="5dp"
                            android:layout_gravity="top|center"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_messenger"
                            android:id="@+id/noteFlag"
                            tools:ignore="VectorDrawableCompat" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/MMGray"
                android:paddingBottom="5dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="15dp"
            style="@style/CardView.MyStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:text="@string/log_out" />


                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="36dp"
                            android:layout_marginRight="10dp"
                            android:layout_height="36dp"
                            android:padding="5dp"
                            android:layout_gravity="top|center"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_logout_btn"
                            tools:ignore="VectorDrawableCompat" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>